# pgchat

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  agent.py  pyproject.toml  requirements.txt
pgagent/: __init__.py  agent.py  cli.py  config.py  db.py  memory.py  schema_cache.py  tools.py  ui.py
pgchat/: __init__.py  agent.py  chart.py  cli.py  config.py  db.py  explain.py  export.py  memory.py  safety.py  schema_cache.py  tools.py  ui.py
sessions/: .gitkeep
tests/: test_explain.py  test_llm.py  test_safety.py  test_tools.py
