[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgagent"
version = "1.0.0"
description = "An AI-powered PostgreSQL assistant CLI built with LangChain and local/cloud LLMs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Gaurav", email = "gaurav@gauravbytes.dev"},
]
keywords = ["postgresql", "ai", "agent", "cli", "langchain", "ollama", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "langchain>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "psycopg2-binary>=2.9.9",
    "rich>=13.7.0",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
]

[project.scripts]
pgagent = "pgagent.cli:main"

[project.urls]
Homepage = "https://github.com/gauravbytes/pgagent"
Repository = "https://github.com/gauravbytes/pgagent"

[tool.setuptools.packages.find]
include = ["pgagent*"]

