[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgchat"
version = "1.0.0"
description = "A beautiful AI-powered CLI agent to chat with your PostgreSQL database"
authors = [{ name = "Gaurav Kumar", email = "gaurav@gauravbytes.dev" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["postgresql", "ai-agent", "cli", "langchain", "ollama", "database", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "psycopg2-binary>=2.9.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "questionary>=2.0.0",
    "plotly>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/icon-gaurav/pgchat"
Repository = "https://github.com/icon-gaurav/pgchat.git"
Issues = "https://github.com/icon-gaurav/pgchat/issues"

[project.scripts]
pgchat = "pgchat.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pgchat*"]

[tool.setuptools.package-data]
pgchat = ["py.typed"]
